Updates/Fixes for v0.7.6

--- a/bower.json
+++ b/bower.json
@@ -1,10 +1,11 @@
 {
     "name": "phpDBAdmin",
-    "version": "0.5.0",
+    "version": "0.7.6",
     "dependencies": {
 		"bootstrap": ">= 3.3.0",
         "jquery": ">= 1.11.1",
         "fontawesome": ">= 4.2.0",
         "AppJack": "https://github.com/cclark61/AppJack.git#0.5.2"
+        "ace": ">= 1.1.8"
     }
 }
