Updates/Fixes for v0.7.6

--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,7 @@
 		"bootstrap": ">= 3.3.0",
         "jquery": ">= 1.11.1",
         "fontawesome": ">= 4.2.0",
-        "AppJack": "https://github.com/cclark61/AppJack.git#0.5.2"
+        "AppJack": "https://github.com/cclark61/AppJack.git#0.5.2",
         "ace": ">= 1.1.8"
     }
 }
