Updates/Fixes for v0.7.6

--- a/bower.json
+++ b/bower.json
@@ -6,6 +6,6 @@
         "jquery": ">= 1.11.1",
         "fontawesome": ">= 4.2.0",
         "AppJack": "https://github.com/cclark61/AppJack.git#0.5.2",
-        "ace": ">= 1.1.8"
+        "ace-builds": ">= 1.1.8"
     }
 }
